tests/errors/E033.zen
str[3] hello() {
    return {"Hello", ",", "world"};
}

void main() {
    let msg := hello();
}